- Fixed bug #47152 (gzseek/fseek using SEEK_END produces strange results)